Space profile evenly on large screens and fix pulse getting cut off

--- a/styles/home/Profile.module.scss
+++ b/styles/home/Profile.module.scss
@@ -239,7 +239,7 @@
   }
 
   .profile-description-line2 {
-    margin-bottom: 2rem;
+    margin-bottom: 4vh;
   }
 
   .profile-img {
