--- a/styles/page/Layout.module.scss
+++ b/styles/page/Layout.module.scss
@@ -102,14 +102,13 @@
 }
 
 .content {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   min-width: $content-min-width;
-  margin: auto 0;
-  padding: 2rem 0;
   overflow: auto;
 
   &:global(.content-animating) {
